--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAo7LXq2n9WArZCdJyiyQPusZ4U9NBxSts&libraries=places"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAo7LXq2n9WArZCdJyiyQPusZ4U9NBxSts&libraries=places"></script> -->
     <title>Upshot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">Welcome to re-vents</div>
+    <div id="root">Welcome to Upshot</div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
